--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="member-image">
                         <div class="avatar">TK</div>
                     </div>
-                    <h3>Tanubahv Katiyar</h3>
+                    <h3>Tanubhav Katiyar</h3>
                     <p class="member-role">Team Lead</p>
                     <div class="social-links">
                         <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
@@ -70,7 +70,7 @@
                     <div class="member-image">
                         <div class="avatar">A</div>
                     </div>
-                    <h3>Arkapravo</h3>
+                    <h3>Arkapravo Rajkonwar</h3>
                     <p class="member-role">Developer</p>
                     <div class="social-links">
                         <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
@@ -82,7 +82,7 @@
                     <div class="member-image">
                         <div class="avatar">SS</div>
                     </div>
-                    <h3>Soham Sarang</h3>
+                    <h3>Soham Saranga</h3>
                     <p class="member-role">Designer</p>
                     <div class="social-links">
                         <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
